The socket stays open. Everything works!

--- a/tests/test.html
+++ b/tests/test.html
@@ -1,5 +1,5 @@
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="rtm.js"></script>
+<script src="../rtm.js"></script>
 <script>
 // create a real-time-mongo instance
 rtm = new RTM("ws://taiiwo.tk:12345/");
